AG-13783 - fixed cell height with wrapText and without autoHeight

--- a/community-modules/styles/src/internal/base/parts/_common-structural.scss
+++ b/community-modules/styles/src/internal/base/parts/_common-structural.scss
@@ -826,11 +826,6 @@
         text-overflow: ellipsis;
     }
 
-    .ag-cell-wrap-text {
-        white-space: normal;
-        word-break: break-word;
-    }
-
     .ag-cell-wrapper {
         display: flex;
         align-items: center;
@@ -840,6 +835,18 @@
         // width: 100%;
         &.ag-row-group {
             align-items: flex-start;
+        }
+    }
+
+    .ag-cell-wrap-text {
+        white-space: normal;
+        word-break: break-word;
+    }
+
+    .ag-cell-wrap-text:not(.ag-cell-auto-height) .ag-cell-wrapper {
+        height: 100%;
+        .ag-cell-value {
+            height: 100%;
         }
     }
 
